images of the dice added ... but still not working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Roll The Dice Game</title>
  </head>
  <body>
-    <h1>ROLL THE DICE: THE GAME</h1>
-    <button>Roll Dice</button>
+    <div class="container">
+      <div class="dice-wrapper">
+<img src="dice-01.svg" id="dice-01">
+<img src="dice-02.svg" id="dice-02">
+      </div>
+    </div>
  </body>
  </html>
